# ProjectPayphone

./: .env.example  .gitignore  DEPLOY_HOOK_SETUP.md  README.md  REMOTE_GENERATION.md  SPEC.md  TRAINING_COLAB.md  TRAINING_ITERATION.md  V0_INTEGRATION.md  ingest_old_bailey.py  pyproject.toml  requirements.txt  run_both.sh  run_flask.sh  run_flask_remote.sh  run_local.sh  xml_files
app/: __init__.py  db.py  llm.py  main.py  models.py  prompts.py  story_export.py
app/static/: styles.css
app/templates/: base.html  case_detail.html  cases.html  index.html
data/oldbailey_xml/__MACOSX/ordinarysAccounts/: ._OA17530528.xml
data/training/: case_story_pairs.jsonl
notebooks/: colab_training_script.py  train_payphone_colab.ipynb
scripts/: convert_training_dataset.py  export_training_pairs.py  generate_training_stories.py  ingest_all.sh  ingest_fastapi_data.sh  ingest_flask_data.sh  setup-ngrok-token.sh  test_payphone_model.py  train_payphone_model.py  validate_training_dataset.py
src/oldbailey/: cli.py
src/oldbailey/db/: sqlite.py
src/oldbailey/io/: obo_xml.py  obv2.py  obv2_tsv.py
src/oldbailey/model/: schema.py
src/oldbailey/pipeline/: ingest.py
src/oldbailey/web/: __init__.py  server.py
src/oldbailey/web/static/: style.css
src/oldbailey/web/templates/: base.html  case_detail.html  cases.html  (+1 more)
tests/: test_ingest.py  test_integration.py  test_obo_xml.py  test_obv2_tsv.py  test_sqlite.py  test_web.py
training/: README.md  requirements.txt  train.py
training_data_1/: stories_dataset.csv  stories_dataset_cleaned.csv  training_payphone.jsonl
